# ImplicitFunction

./: .gitignore  .travis.yml  2DConvexHull.h  API.cpp  API.h  BBox.cpp  BBox.h  BHNode.cpp  BHNode.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  ETSP.cpp  ETSP.h  FMM.cpp  FMM.h  ImplicitFunctionConfig.cmake.in  LinearSolver.cpp  LinearSolver.h  RBF.cpp  RBF.h  RBFInterface.cpp  RBFInterface.h  README.md  SampleData.cpp  SampleData.h  ScatteredData.cpp  ScatteredData.h  SparseMatrix.cpp  SparseMatrix.h  Surface.cpp  Surface.h  UseImplicitFunction.cmake  a.out  fault.cpp  fault.h  fileIO.h  horizon.cpp  horizon.h  main.cpp  (+9 more)
.github/workflows/: ccpp.yml
Tests/: CMakeLists.txt  ConvexHull2DTests.cpp  ConvexHull3DTests.cpp  RBFInterfaceTests.cpp  RBFTests.cpp  ScatteredDataTests.cpp  Seg3DIntegrationTest.cpp  Vec3Tests.cpp
Tests/regression/: pointsTriangleClockwise.txt
segmentation/: original.txt  sample_points_DEMRI.txt
